--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <li><a href="https://linkedin.com/in/tanusree-mallik15"><i class="bi bi-linkedin"></i></a></li>
         </ul>
 
-        <span><a href="https://drive.google.com/file/d/1iMxKhyr1kUavkv8gwaDisTSKv18Dp74z/view?usp=sharing" class="btn-resume">Check Resume</a></span>
+        <span><a href="https://drive.google.com/file/d/1aYl8OlicYqxyoqG3QGpTPV2ZAE_YOaAq/view?usp=sharing" class="btn-resume">Check Resume</a></span>
       </div>
 
     </div>
@@ -115,10 +115,10 @@
               <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
                 <div class="icon-box iconbox">
 
-                  <h4><a href="">Higher Secondary-Class XII PCM</a></h4>
+                  <h4><a href="">Secondary-Class XII PCM</a></h4>
                   <h5>Netaji Subhas Vidyaniketan/TBSE</h5>
                   <p>2018
-                    <br>Percentage-87.6
+                    <br>Percentage-87.2
                   </p>
                 </div>
               </div>
