--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
                 <div class="icon-box iconbox">
 
-                  <h4><a href="">Secondary-Class XII PCM</a></h4>
+                  <h4><a href="">Higher Secondary-Class XII PCM</a></h4>
                   <h5>Netaji Subhas Vidyaniketan/TBSE</h5>
                   <p>2018
                     <br>Percentage-87.2
@@ -125,7 +125,7 @@
 
               <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
                 <div class="icon-box iconbox">
-                  <h4><a href="">&nbsp &nbsp  Higher Secondary - Class X &nbsp &nbsp  </a></h4>
+                  <h4><a href="">&nbsp &nbsp  Secondary - Class X &nbsp &nbsp  </a></h4>
                   <h5>Netaji Subhas Vidyaniketan/TBSE</h5>
                   <p>2016
                     <br>Percentage-89.4
