--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
               <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
                 <div class="icon-box iconbox">
-                  <h4><a href="">&nbsp &nbsp  Secondary - Class X &nbsp &nbsp  </a></h4>
+                  <h4><a href=""> &nbsp Secondary School - Class X &nbsp  </a></h4>
                   <h5>Netaji Subhas Vidyaniketan/TBSE</h5>
                   <p>2016
                     <br>Percentage-89.4
