--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <!-- Uncomment below if you prefer to use an text logo -->
+      <!-- <a href="index.html" class="logo"><img src=" " alt="" class="img-fluid"></a> -->
+      <!-- text logo -->
       <h1 class="logo"><a href="index.html">Tanusree</a></h1>
 
       <nav id="navbar" class="navbar">
@@ -101,7 +101,7 @@
         </div>
           <div class="row">
 
-              <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+              <div class="col-lg-4 col-md-6 mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="100">
                 <div class="icon-box iconbox">
 
                   <h4><a href="">Bachelor of Technology</a></h4>
@@ -112,7 +112,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+              <div class="col-lg-4 col-md-6 mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
                 <div class="icon-box iconbox">
 
                   <h4><a href="">Higher Secondary-Class XII PCM</a></h4>
@@ -123,9 +123,9 @@
                 </div>
               </div>
 
-              <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+              <div class="col-lg-4 col-md-6 mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="300">
                 <div class="icon-box iconbox">
-                  <h4><a href=""> &nbsp Secondary School - Class X &nbsp  </a></h4>
+                  <h4><a href="">  Secondary - Class X  </a></h4>
                   <h5>Netaji Subhas Vidyaniketan/TBSE</h5>
                   <p>2016
                     <br>Percentage-89.4
@@ -256,16 +256,13 @@
 
       <div class="container">
         <div class="section-title text-center">
-          <h2>My Projects</h2>
+          <h2>My Personal Projects</h2>
         </div>
       </div>
 
       <div class="container">
 
-
-
         <div class="row portfolio-container">
-
           <div class="col-lg-6 col-md-12 portfolio-item ">
             <img src="assets/img/web1.png"  class="img-fluid" alt="">
             <div class="portfolio-info">
